# car_cluster_v1

./: README.md
car_cluster_v1/: .gitignore  CMakeLists.txt  CentralPanel.qml  Fuel.qml  InfoPage.qml  KilometerPage.qml  Main.qml  MainMenu.qml  MotorTemp.qml  RMPCluster.qml  SpeedCluster.qml  SpeedPage.qml  main.cpp  tcpclient.cpp  tcpclient.h
